fixed center align problem for img on mobile devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -78,7 +78,7 @@
 
 .qr_preview img {
   width: 60%;
-  margin: auto;
+  margin: 0px auto;
 }
 
 .footer {
